# template-fastapi-py312

./: .dockerignore  .flake8  .pre-commit-config.yaml  Dockerfile  create_env.sh  pyproject.toml
app/: .env_example  config.py  main.py  router.py
app/controller/: hello.py
app/service/: hello.py
app/util/: database.py
